Include more project files. Update README.

--- a/SemVerAdvisor.csproj
+++ b/SemVerAdvisor.csproj
@@ -34,4 +34,9 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="LICENSE" />
+    <None Include="README.md" />
+    <None Include=".travis.yml" />
+  </ItemGroup>
 </Project>
