--- a/SemVerAdvisor.csproj
+++ b/SemVerAdvisor.csproj
@@ -7,7 +7,6 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SemVerAdvisor</RootNamespace>
     <AssemblyName>SemVerAdvisor</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,5 +37,7 @@
     <None Include="LICENSE" />
     <None Include="README.md" />
     <None Include=".travis.yml" />
+    <None Include="SemVerAdvisor.nuspec" />
+    <None Include="SemVerAdvisor.png" />
   </ItemGroup>
 </Project>
