--- a/SemVerAdvisor.csproj
+++ b/SemVerAdvisor.csproj
@@ -31,6 +31,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Advisor.cs" />
+    <Compile Include="VersionChange.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
